// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card 1 1`] = `
<div
  className="card"
>
  <div
    className="card-body"
  >
    <h4
      className="card-title"
    >
      title 1
    </h4>
    <p
      className="card-text"
    >
      text 1
    </p>
  </div>
</div>
`;

exports[`Card 2 1`] = `
<div
  className="card"
>
  <div
    className="card-body"
  >
    <h4
      className="card-title"
    >
      title 1
    </h4>
    <p
      className="card-text"
    >
      text 1
    </p>
  </div>
</div>
`;

exports[`Card 4 1`] = `
<div
  className="card"
>
  <div
    className="card-body"
  >
    <h4
      className="card-title"
    >
      title 1
    </h4>
  </div>
</div>
`;

exports[`Card 5 1`] = `
<div
  className="card"
>
  <div
    className="card-body"
  >
    <p
      className="card-text"
    >
      text 1
    </p>
  </div>
</div>
`;
